# trunk

./: README.md
alsa/: Makefile  alsa.c  alsa.h  config.h  piyavsky.c  piyavsky.h
balloc/: Makefile  README.md  balloc.c  balloc.h  test.c
balloc2/: .clang-format  CMakeLists.txt  README.md  balloc2.doxygen  balloc2.h  test_balloc2.cpp
btfat/: Makefile  btfat.c  btfat.h  main.c
btutils/: AUTHORS  ChangeLog  README  configure.in
btutils/src/: Makefile.am
btutils/src/btcheck/: Makefile.am  btcheck.pl
btutils/src/btread/: Makefile.am  btread.c
btutils/src/btwrite/: Makefile.am  btwrite.c
co/: Makefile  co.pl  cotree.pm  footer.asm  header.asm  input.c
coursera/c1/w2/fibonacci/: fib.py
coursera/c1/w2/fibonacci_huge/: fibonacci_huge.py
coursera/c1/w2/fibonacci_last_digit/: fibonacci_last_digit.py
coursera/c1/w2/gcd/: gcd.py
coursera/c1/w2/lcm/: lcm.py
coursera/c1/w3/change/: change.py
coursera/c1/w3/covering_segments/: covering_segments.py
coursera/c1/w3/different_summands/: different_summands.py
coursera/c1/w4/binary_search/: binary_search.py
lsb/: lsb.pl
pf/: pf.py  setup.py
rage-nov-21-final/: Makefile  abus.c  abus.h  data.c  data.h  eth.c  eth.h  event.c  event.h  io.c  io.h  list.c  list.h  lstack.c  lstack.h  mkio.c  mkio.h  queue.c  queue.h  rage.c  rage.h  rage.sh  rc.c  rc.h  readme  serial.c  serial.h  system.c  system.h
samsung/pre-empl/: foo.cpp  s1.txt  s2.txt
samsung/pre-empl1/: foo1.cpp  s1.txt  s2.txt
samsung/pre-empl2/: foo2.cpp  s1.txt
samsung/pre-empl3/: foo3.c  s1.txt
samsung/pre-empl4/: s1.txt  walls.c
(+79 files in other folders)
